# student-lab

./: .gitignore  ARCHITECTURE.md  README.md
cli/: README.md  pyproject.toml
cli/ewok_lab/: __init__.py  cli.py  client.py  config.py  proxy_server.py
dashboard/: README.md  app.js  index.html  styles.css
docs/: claude-md-template.md  lab-host-setup.md  student-onboarding.md  tailscale-acl.md
gateway/: .env.example  .gitignore  README.md  ROUTING.md  pyproject.toml
gateway/app/: __init__.py  admin.py  auth.py  bootstrap.py  config.py  db.py  logging_mw.py  main.py  models.py  proxy.py  quota.py  router.py
gateway/app/routes/: dashboard.py  dashboard_identity.py  inference.py  status.py
gateway/tests/: conftest.py  test_admin.py  test_auth.py  test_dashboard_identity.py  test_proxy.py  test_router.py  test_status.py
infra/: README.md  cloudflare-tunnel.yml.template
infra/launchd/: com.cloudflared.studentlab.plist  com.studentlab.gateway.plist
