[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ewok-lab"
version = "0.1.0"
description = "CLI for Jay's student-lab gateway: login, status, models, chat, and a localhost Ollama-compatible proxy"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.scripts]
ewok-lab = "ewok_lab.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ewok_lab*"]
